Database API calling issues resolved

--- a/ContactListApi/appsettings.json
+++ b/ContactListApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ContactListDb": "Server=DESKTOP-SHOHAG\\MSSQLSERVER19;Initial Catalog=ContactListDb; Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
